[gd_scene load_steps=3 format=3 uid="uid://b1i4jx5w26gpw"]

[ext_resource type="Script" path="res://SCRIPTS/ui_scripts/audio_manager.gd" id="1_ohq3m"]
[ext_resource type="AudioStream" uid="uid://b3w0l1645kai5" path="res://AUDIO/sfx/card_hover.wav" id="2_n77sb"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_ohq3m")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
bus = &"Music"

[node name="SFXPlayer1" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
max_polyphony = 8
bus = &"SFX"

[node name="SFXPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
max_polyphony = 8
bus = &"SFX"

[node name="SFXPlayer3" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
max_polyphony = 8
bus = &"SFX"

[node name="SFXPlayer4" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
max_polyphony = 8
bus = &"SFX"

[node name="MenuSFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_n77sb")
volume_db = -16.0
bus = &"SFX"

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
